<resources>
    <string name="app_name">Qmart</string>
    <string name="category">Категория</string>
    <string name="country">Страна</string>
    <string name="city">Город (только доступные)</string>
    <string name="continue_button">Продолжить</string>
    <string name="categories">Категории</string>
    <string name="reset_filter">Сбросить</string>
    <string name="result_activity_info">Чтобы подключиться к Qmart, подпишите документы онлайн.</string>
    <string name="connect_qmart">Подключиться к Qmart</string>
    <string name="request_ok">Ваша заявка одобрена.</string>
    <string name="request_fail">Ваша заявка не одобрена.</string>
    <string name="describe_in_detail_title">Опишите в подробностях</string>
    <string name="add_photo"><u>Добавить фото</u></string>
    <string name="product_create_title">Создание товара</string>
    <string name="product_name">Название товара</string>
    <string name="name">Имя</string>
    <string name="description">Описание</string>
    <string name="info">Инфо</string>
    <string name="main_characteristics">Основные характеристики</string>
    <string name="country_of_production">Страна производства</string>
    <string name="expiration_date">Срок годности</string>
    <string name="type_of_package">Упаковка</string>
    <string name="type_of_cookie">Разновидность печенья</string>
    <string name="ingredients">Добавки</string>
    <string name="characteristics">Особенности</string>
    <string name="choose_city_title">Выберите город (только доступные)</string>
    <string name="choose_country_title">Выберите страну производства</string>
    <string name="add_sale_point_title">Добавить точку продаж</string>
    <string name="sale_point">Точка продаж</string>
    <string name="cashiers">Кассиры</string>
    <string name="add_address_name_of_sale_point">Указать адрес и название точки</string>
    <string name="set_receive_pay_point">Укажите точку, в которой Вы будете принимать оплату:</string>
    <string name="address_subinfo_title">Вы будете назначены кассиром в этой точке и сможете принимать оплату самостоятельно.</string>
    <string name="cashier_subinfo_title">Если вы хотите принимать оплату сами, назначьте себя кассиром.</string>
    <string name="address">Адрес</string>
    <string name="delivery_address">Адрес доставки</string>
    <string name="point_name">Название</string>
    <string name="add_cashier">Добавить кассира</string>
    <string name="set_yourself_cashier">Назначить себя кассиром</string>
    <string name="save_sale_point">Сохранить точку продаж</string>
    <string name="menu_home">Главная</string>
    <string name="menu_orders">Заказы</string>
    <string name="menu_plus">Создать</string>
    <string name="menu_products">Товары</string>
    <string name="menu_more">Еще</string>
    <string name="connect_call_center">Связаться с поддержкой</string>
    <string name="order_type_concat">%s (%d)</string>
    <string name="empty_orders_text">У вас пока нет\nНовых заказов</string>
    <string name="product_edit_hint">Название товара</string>
    <string name="product_cost_edit_hint">Цена,тг</string>
    <string name="add_product_button">Добавить новый товар</string>
    <string name="settings_title">Настройки</string>
    <string name="information">Информация</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="create">Создать</string>
    <string name="products">Продукты</string>
    <string name="appliances">Бытовая техника</string>
    <string name="all_for_home">Все для дома</string>
    <string name="furniture">Мебель</string>
    <string name="electronic">Электроника</string>
    <string name="accessories">Аксессуары</string>
    <string name="sport">Спорт</string>
    <string name="make_up">Красота</string>
    <string name="zoo_products">Зоо товары</string>
    <string name="welcome">Добро пожаловать на</string>
    <string name="welcome_2">Qmart!</string>
    <string name="paragraph1">Войдите, чтобы продать свои продукты. Нет профиля?</string>
    <string name="paragraph2">Создайте его за минуты.</string>
    <string name="sign_main">Войти</string>
    <string name="log_main">Создать профиль</string>
    <string name="Qmart">Qmart</string>
    <string name="Hi">Приветствуем в Qmart!</string>
    <string name="mail_or_phone">Электронная почта или телефон</string>
    <string name="phone_num">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="froget_pass">Забыли пароль?</string>
    <string name="log_in">Войти</string>
    <string name="sign_in">Создать профиль</string>
    <string name="new_user">Новый пользователь?</string>
    <string name="crate">Создать аккаунт</string>
    <string name="sign_in1">Укажите свои данные</string>
    <string name="info2">Заполните свои данные.</string>
    <string name="FIO">ФИО</string>
    <string name="info3">Заполните свои данные для дальнейшего продолжения.</string>
    <string name="IIN">ИИН</string>
    <string name="Business">Название вашего бизнеса</string>
    <string name="go">Продолжить</string>
    <string name="old_user">Есть аккаунт?</string>
    <string name="email">Email</string>
    <string name="reset_password">Сбросить пароль</string>
    <string name="send">Отправить</string>
    <string name="verification">Верификация</string>
    <string name="next">Продолжить</string>
    <string name="type_num">Введите номер телфона</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_of_products">Список продуктов</string>
    <string name="sum">Итого</string>
</resources>