<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_menu_orders"
        android:title="@string/menu_orders" />

    <item
        android:id="@+id/navigation_plus"
        android:icon="@drawable/ic_menu_plus"
        android:title="@string/menu_plus" />
    <item
        android:id="@+id/navigation_products"
        android:icon="@drawable/ic_menu_products"
        android:title="@string/menu_products" />
    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_menu_more"
        android:title="@string/menu_more" />
</menu>