<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_r20_half"
    android:backgroundTint="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_close_button"
        app:tint="@color/grey_400" />


    <TextView
        style="@style/ToolbarTitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:gravity="start"
        android:text="@string/set_receive_pay_point"
        android:textStyle="normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/address_subinfo_title"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey_200" />

    <TextView
        style="@style/TextInputStyle.24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/point_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/salePointNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_r12"
        android:gravity="center_vertical"
        android:hint="Название точки"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:padding="16dp" />

    <TextView
        style="@style/TextInputStyle.24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/address" />

    <TextView
        android:id="@+id/chooseCityTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_r12"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/city"
        app:drawableEndCompat="@drawable/ic_choose_arrow_down" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/salePointStreetEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_r12"
        android:gravity="center_vertical"
        android:hint="Улица"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:padding="16dp" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/salePointHouseEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_r12"
        android:gravity="center_vertical"
        android:hint="Дом"
        android:inputType="number"
        android:maxLines="1"
        android:padding="16dp" />


    <Button
        android:id="@+id/chooseButton"
        style="@style/Button.Green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="52dp"
        android:text="@string/continue_button" />


</LinearLayout>